# fase-1

./: .dockerignore  .env.dev.example  .env.example  .env.prod.example  .gitignore  Dockerfile  Dockerfile-backend  Dockerfile.backend.dev  Dockerfile.backend.prod  Dockerfile.dev  Dockerfile.frontend.dev  Dockerfile.frontend.prod  Dockerfile.prod  LICENSE  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  heroku.yml  pyproject.toml  start-backend-dev.sh  start-backend-prod.sh  start-backend.sh  start-dev.sh  start-frontend-dev.sh  start-frontend-prod.sh  start-frontend.sh  start-prod.sh  start.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: backend_tests.yml  deploy-backend.yml  deploy-frontend.yml
alembic/: env.py
alembic/versions/: 054ad84cd6d6_update_tables_new_model.py  dfc9d0632cdc_update_tables_new_model_version.py  v1_add_indexes_to_books_table.py  v1_corrige_tabela_books.py  v1_create_book_table.py
api/: main.py  register_endpoints.py
api/controllers/: books.py  categories.py  health.py
api/schemas/: __init__.py
app/: main.py
app/api/: register_endpoints.py
app/controller/: scraping_controller.py
app/domain/: models.py  services.py
app/infrastructure/: __init__.py  database.py  session_manager.py  webdriver_infrastructure.py
app/port/: __init__.py  book_port.py  category_port.py  scraping_port.py
app/schemas/: __init__.py  book_schema.py  category_schema.py  pagination_schema.py  scraping_schema.py
app/services/: __init__.py  book_service.py  (+3 more)
application/: __init__.py  use_cases.py
docs/: api_endpoints.md  architecture.md  database_schema.md  docker.md  hexagonal.md
domain/: __init__.py  repositories.py
frontend/: app.py
infrastructure/: __init__.py  database.py  scraper.py
scripts/: scraper.py
tests/: conftest.py
(+62 files in other folders)
